--- a/index.Rmd
+++ b/index.Rmd
@@ -3,20 +3,22 @@ title: "Cascade Summer 2024"
 output: html_document
 ---
 
-*idea - if any of the EWS alarms go off, have text at the top of the page that there is a blooom!
+*idea - if any of the EWS alarms go off, have text at the top of the page that there is a bloom!
 
 This is to test displaying new incoming data for the upcoming field season. 
-We want to 
+ 
 1) print the time of the last update 
 2) check if there are any missing data or outliers 
-3) 
+  - keep a running list 
+3) shiny app to easily display data from the 3 lakes? (instead of scrolling through a static page with all the variables)
+4) EWS and early fancy stats/math that PIs want
+  
 
 Time of last update:
 ```{r, echo=FALSE}
 print(Sys.time())
 ```
 
-testing testing pls update
 
 ```{r, echo=FALSE}
 data(cars)
